Refine SEO crawler directives

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
   <meta name="description" content="TokenTribute is a Web3 donation platform that rewards high-credibility Ethos members with USDC. Support trusted creators, builders, and contributors on-chain." />
   <meta name="keywords" content="Web3 donations, Ethos Network, credibility score, USDC donations, Base blockchain, crypto tipping, decentralized donations, on-chain reputation, TokenTribute" />
   <meta name="author" content="TokenTribute" />
-  <meta name="robots" content="index, follow" />
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+  <meta name="googlebot" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
 
   <!-- Canonical -->
-  <link rel="canonical" href="https://tokentribute.xyz" />
+  <link rel="canonical" href="https://token-tribute.vercel.app/" />
 
   <!-- Favicon -->
   <link rel="icon" href="/favico.svg" type="image/png" />
@@ -26,15 +27,33 @@
   <!-- Open Graph (Facebook, LinkedIn, etc) -->
   <meta property="og:title" content="TokenTribute | Credibility-Based Web3 Donations" />
   <meta property="og:description" content="Donate to trusted Ethos members using USDC. A credibility-first, on-chain donation platform built on Base." />
-  <meta property="og:image" content="https://tokentribute.xyz/favico.svg" />
-  <meta property="og:url" content="https://tokentribute.xyz" />
+  <meta property="og:image" content="https://token-tribute.vercel.app/favico.svg" />
+  <meta property="og:url" content="https://token-tribute.vercel.app/" />
+  <meta property="og:site_name" content="TokenTribute" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="TokenTribute | Credibility-Based Web3 Donations" />
   <meta name="twitter:description" content="Reward credibility. Donate on-chain. Powered by Ethos Network and Base." />
-  <meta name="twitter:image" content="https://tokentribute.xyz/og-image.png" />
+  <meta name="twitter:image" content="https://token-tribute.vercel.app/favico.svg" />
+  <meta name="twitter:site" content="@TokenTribute" />
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "TokenTribute",
+      "url": "https://token-tribute.vercel.app/",
+      "description": "TokenTribute is a Web3 donation platform that rewards high-credibility Ethos members with USDC.",
+      "inLanguage": "en",
+      "publisher": {
+        "@type": "Organization",
+        "name": "TokenTribute"
+      }
+    }
+  </script>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
