--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <!-- Basic Meta -->
+   <meta name="google-site-verification" content="DXBgWHiLqtutl0e8XpJ_pA0iKS5v1-ukYqD_LhPER6o" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
